# bullseye

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/commands/: crstl-po-alert.md
.claude/skills/crstl-po-alert/: SKILL.md
evals/: bpd_eval.xml
scripts/: bootstrap_auth.py  validate_kmg.py  verify_install.sh
src/bpd_mcp/: __init__.py  __main__.py  auth.py  client.py  column_roles.py  config.py  formatting.py  logging_setup.py  parsers.py  schemas.py  server.py  sql_safety.py  sync.py  warehouse.py
src/bpd_mcp/tools/: __init__.py  admin.py  files.py  query.py  sync.py
tests/: conftest.py  test_analytics_real_columns.py  test_audit_drift_guards.py  test_auth.py  test_column_roles.py  test_date_detection.py  test_export_csv.py  test_health_check.py  test_parsers.py  test_read_only_view.py  test_sql_safety.py  test_sync_worker.py  test_tools_admin.py  test_tools_query.py  test_validate_kmg.py  test_warehouse.py
